@@ -1,3 +1,7 @@
+drkns 07.08.2016 21:59:50 +0200 - build 4753
+
+1. После 4747 не работали адаптеры.
+
 drkns 07.08.2016 15:01:50 +0200 - build 4752
 
 1. Пара оптимизаций работы с буфером обмена.
